Refactor: Move inline styles to external CSS file
- Extract all inline styles from tester.html and index.html
- Consolidate styles in styles.css for better maintainability
- Add external CSS link to both HTML files
- Improve code organization and reusability

--- a/js-basics/tester.html
+++ b/js-basics/tester.html
@@ -4,97 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavaScript Тестер</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 20px;
-            background-color: #f0f0f0;
-        }
-        .container {
-            background: white;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-        }
-        .header {
-            text-align: center;
-            color: #333;
-            margin-bottom: 30px;
-        }
-        .code-area {
-            width: 100%;
-            height: 300px;
-            font-family: 'Courier New', monospace;
-            font-size: 14px;
-            padding: 15px;
-            border: 2px solid #ddd;
-            border-radius: 5px;
-            resize: vertical;
-        }
-        .buttons {
-            margin: 20px 0;
-            text-align: center;
-        }
-        .btn {
-            background: #007bff;
-            color: white;
-            border: none;
-            padding: 10px 20px;
-            border-radius: 5px;
-            cursor: pointer;
-            margin: 0 10px;
-            font-size: 16px;
-        }
-        .btn:hover {
-            background: #0056b3;
-        }
-        .btn.clear {
-            background: #dc3545;
-        }
-        .btn.clear:hover {
-            background: #c82333;
-        }
-        .output {
-            background: #1e1e1e;
-            color: #00ff00;
-            padding: 15px;
-            border-radius: 5px;
-            font-family: 'Courier New', monospace;
-            min-height: 200px;
-            max-height: 400px;
-            overflow-y: auto;
-            white-space: pre-wrap;
-            font-size: 14px;
-        }
-        .examples {
-            margin-top: 30px;
-        }
-        .example {
-            background: #f8f9fa;
-            padding: 10px;
-            border-radius: 5px;
-            margin: 10px 0;
-            cursor: pointer;
-            border: 1px solid #ddd;
-        }
-        .example:hover {
-            background: #e9ecef;
-        }
-        .example-title {
-            font-weight: bold;
-            color: #495057;
-            margin-bottom: 5px;
-        }
-        .example-code {
-            font-family: 'Courier New', monospace;
-            font-size: 12px;
-            color: #6c757d;
-        }
-    </style>
+    <link rel="stylesheet" href="../styles.css">
 </head>
-<body>
+<body class="tester-body">
     <div class="container">
         <div class="header">
             <h1>🚀 JavaScript Тестер</h1>
